--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ logging.level.com.fly.admin=debug
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.profiles.active=dev
+server.servlet.context-path=/system/
